# Ultra_Magnus

./: .gitignore  BUILD.md  CHECKLIST.md  CMakeLists.txt  QUICKSTART.md  README.md  SETUP_COMPLETE.md  package.xml
config/: params.yaml
include/ultra_magnus/: controller.hpp  navigation.hpp  perception.hpp
launch/: robot.launch.py
scripts/: calibration.py
src/: controller.cpp  main.cpp  navigation.cpp  perception.cpp
test/: test_controller.cpp
